--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
     "@ionic/storage": "^2.3.1",
+    "awesomplete": "^1.1.5",
     "cordova-sqlite-storage": "^5.1.0",
     "date-fns": "^2.16.1",
     "rxjs": "~6.5.5",
